--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
                 </div>
                 <div class="space-y-4">
                     <h1 class="text-2xl font-bold">Subscribe to our newsletter</h1>
-                  <div class="flex gap-5 items-center">
+                  <div class="  md:flex  md:gap-5 items-center">
                     <div>
                         <input class="border-b-2 bg-red-100  border-black" type="email" name="email" id="" placeholder="Email Address">
                       </div>
-                      <div>
-                        <i class="fa-solid fa-chevron-right bg-red-500 p-2 rounded-full"></i>
+                      <div class="mt-5">
+                        <i class="  fa-solid fa-chevron-right bg-red-500 p-2 rounded-full"></i>
                       </div>
                   </div>
                   <div class=" flex gap-5 ">
